--- a/terraba/fe/bower.json
+++ b/terraba/fe/bower.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "angular": "~1.2.22",
     "bootstrap": "~3.2.0",
-    "html5-boilerplate": "~4.3.0"
+    "html5-boilerplate": "~4.3.0",
+    "angular-route": "~1.2.22"
   },
   "ignore": [
     "**/.*",
