--- a/terraba/fe/bower.json
+++ b/terraba/fe/bower.json
@@ -16,7 +16,9 @@
     "angular": "~1.2.22",
     "bootstrap": "~3.2.0",
     "html5-boilerplate": "~4.3.0",
-    "angular-route": "~1.2.22"
+    "angular-route": "~1.2.22",
+    "fontawesome": "~4.2.0",
+    "lodash": "~2.4.1"
   },
   "ignore": [
     "**/.*",
