--- a/terraba/terraba.api/terraba.api/Web.config
+++ b/terraba/terraba.api/terraba.api/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-terraba.api-20140822011718.mdf;Initial Catalog=aspnet-terraba.api-20140822011718;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TerrabaContext" connectionString="server=.;database=terraba;Integrated Security=True" providerName="System.Data.SqlClient" />
-  <add name="Model1" connectionString="data source=.;initial catalog=terraba;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+    <add name="TerrabaContext" connectionString="server=.;database=compraspub;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="Model1" connectionString="data source=.;initial catalog=terraba;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="Proveedor" connectionString="data source=.;initial catalog=terraba;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" /><add name="Model11" connectionString="data source=.;initial catalog=compraspub;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
@@ -33,7 +33,7 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
@@ -57,7 +57,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
