--- a/terraba/terraba.api/terraba.api/packages.config
+++ b/terraba/terraba.api/terraba.api/packages.config
@@ -2,9 +2,11 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
+  <package id="Dapper" version="1.34" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="jQuery" version="1.10.2" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net451" />
@@ -14,10 +16,12 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.WebPages.Data" version="2.0.20710.0" targetFramework="net451" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net451" />
@@ -34,4 +38,5 @@
   <package id="Owin" version="1.0" targetFramework="net451" />
   <package id="Respond" version="1.2.0" targetFramework="net451" />
   <package id="WebGrease" version="1.5.2" targetFramework="net451" />
+  <package id="WebMatrix.Data" version="2.0.30506.0" targetFramework="net451" />
 </packages>
